--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,6 +8,15 @@ services:
     ports:
     - "8000:8000"
     environment:
-        DB_DSN: "username:password@tcp(mysql:3306)/ads"
+        DB_DSN: "root:root@tcp(mysql:3306)/ads"
         SRV_ADDR: ":8000"
     
+  mysql:
+    image: mysql
+    command: --default-authentication-plugin=mysql_native_password
+    restart: always
+    volumes:
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      
