--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
     ports:
     - "8000:8000"
     environment:
-        ADSERVER_BASE_URL: "http://adserver"
+        ADSERVER_BASE_URL: "http://adserver:8001"
         DB_DSN: "root:root@tcp(mysql:3306)/ads"
         SRV_ADDR: ":8000"
         KAFKA_BOOTSTRAP_SERVERS: "kafka:9092"
@@ -16,6 +16,19 @@ services:
       - mysql
       - kafka
 
+  adserver:
+    image: example-adserver/adserver
+    build:
+        context: .
+        dockerfile: ./adserver/Dockerfile
+    ports:
+    - "8001:8001"
+    environment:
+        SRV_ADDR: ":8001"
+        KAFKA_BOOTSTRAP_SERVERS: "kafka:9092"
+    depends_on:
+      - kafka
+    
   mysql:
     image: mysql
     command: --default-authentication-plugin=mysql_native_password
