Implement warmup in adserver

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,6 +26,7 @@ services:
     environment:
         SRV_ADDR: ":8001"
         KAFKA_BOOTSTRAP_SERVERS: "kafka:9092"
+        AD_SERVICE_BASE_URL: "http://ads:8000"
     depends_on:
       - kafka
     
